simple-datawarehouse-backend: remove java 21 preview features